--- a/MatchGame/MainWindow.xaml
+++ b/MatchGame/MainWindow.xaml
@@ -19,26 +19,28 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Grid.Column="0" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="0" Grid.Column="1" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="0" Grid.Column="2" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="0" Grid.Column="3" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="0" Grid.Column="4" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="1" Grid.Column="0" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="1" Grid.Column="1" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="1" Grid.Column="2" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="1" Grid.Column="3" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="1" Grid.Column="4" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="2" Grid.Column="0" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="2" Grid.Column="1" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="2" Grid.Column="2" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="2" Grid.Column="3" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="2" Grid.Column="4" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="3" Grid.Column="0" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="3" Grid.Column="1" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="3" Grid.Column="2" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="3" Grid.Column="3" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
-        <TextBlock Grid.Row="3" Grid.Column="4" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0"/>
+        <TextBlock Grid.Row="0" Grid.Column="0" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="0" Grid.Column="1" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="0" Grid.Column="2" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="0" Grid.Column="3" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="0" Grid.Column="4" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="1" Grid.Column="0" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="1" Grid.Column="1" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="1" Grid.Column="2" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="1" Grid.Column="3" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="1" Grid.Column="4" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="2" Grid.Column="0" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="2" Grid.Column="1" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="2" Grid.Column="2" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="2" Grid.Column="3" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="2" Grid.Column="4" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="3" Grid.Column="0" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="3" Grid.Column="1" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="3" Grid.Column="2" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="3" Grid.Column="3" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock Grid.Row="3" Grid.Column="4" FontSize="36" HorizontalAlignment="Center" TextWrapping="NoWrap" Text="?" VerticalAlignment="Center" RenderTransformOrigin="0.5,-0.767" Margin="0,24,0,0" MouseDown="TextBlock_MouseDown"/>
+        <TextBlock x:Name="timeTextBlock" HorizontalAlignment="Center" Grid.Row="4" Text="Elapsed Time" VerticalAlignment="Center" RenderTransformOrigin="-0.423,0.607" Grid.ColumnSpan="5" FontSize="36" MouseDown="TimeTextBlock_MouseDown"/>
     </Grid>
 </Window>
